--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,27 @@
 {
   "manifest_version": 3,
   "name": "FairTerms",
-  "version": "1.0",
-  "description": "Making privacy accessible",
-  "permissions": ["scripting", "activeTab"],
-  "action": {
-    "default_popup": "index.html"
-  },
-  "background": {
-    "service_worker": "background.js"
-  },
-  "web_accessible_resources": [
+  "version": "1.0.0",
+  "action": { "default_popup": "index.html" },
+  "background": { "service_worker": "background.js", "type": "module" },
+  "permissions": ["activeTab", "scripting", "offscreen"],
+  "host_permissions": [
+    "<all_urls>",
+    "https://huggingface.co/*",
+    "https://raw.githubusercontent.com/*",
+    "https://cdn.jsdelivr.net/*"
+  ],
+  "content_scripts": [
     {
-      "resources": [],
-      "matches": ["<all_urls>"]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ],
+  "web_accessible_resources": [
+    { "resources": ["offscreen.html"], "matches": ["<all_urls>"] }
+  ],
   "content_security_policy": {
-  "extension_pages": "script-src 'self'; object-src 'self';"
-}
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
+  }
 }
